// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Image default 1`] = `
<div>
  <img
    class="arco-image-img arco-image arco-image-before-load"
    tabindex="0"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Image set className globally 1`] = `
<div>
  <img
    class="arco-image-img arco-image arco-image-before-load global-default-class"
    tabindex="0"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Image set className globally and component set className itself. 1`] = `
<div>
  <img
    class="arco-image-img arco-image arco-image-before-load component-class"
    tabindex="0"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Image set data-* property 1`] = `
<div>
  <img
    class="arco-image-img arco-image arco-image-before-load"
    data-test-name="Image"
    tabindex="0"
  />
  <div
    class="arco-image-overlay"
  />
</div>
`;
